collaborator view added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -156,6 +156,8 @@ qt_add_qml_module(appResearchManager
         Backend/templatemanager.h Backend/templatemanager.cpp
         QML_FILES ResearchManager/ProjectComponents/NoteViewer.qml
         RESOURCES ResearchManager/images/icons8-dropbox-64.png ResearchManager/images/icons8-google-drive-64.png
+        QML_FILES ResearchManager/ProjectComponents/CollaboratorView.qml
+        SOURCES Backend/collaboratormodel.h Backend/collaboratormodel.cpp
 
 
 )
