--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,9 +9,9 @@ on:
   workflow_dispatch:
     inputs:
       version:
-        description: 'Version tag (e.g., v0.5.0)'
+        description: 'Version tag (e.g., v0.6.0)'
         required: true
-        default: 'v0.5.1'
+        default: 'v0.6.0'
 
 env:
   QT_VERSION: '6.10.1'
@@ -191,7 +191,7 @@ jobs:
           elif [[ "${{ github.ref }}" == refs/tags/* ]]; then
             echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
           else
-            echo "VERSION=rolling-$(date +%Y%m%d-%H%M%S)" >> $GITHUB_OUTPUT
+            echo "VERSION=v0.6.0" >> $GITHUB_OUTPUT
           fi
 
       - name: Create Release
